Fixed spacing in header box

--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 .boxed-text {
   background-color: #5261a8;
   color: white;
-  font-size: 38px;
+  font-size: 42px;
   font-weight:bold;
   border: 1px solid black; 
   }
 
   .headline-box {
-    padding-left: 150px;
-    padding-top:0;
-    height: 75px;
+    /*padding-left: 150px;
+    padding-bottom:15px;*/
+    padding: 0 0 40px 150px;
+    height: 65px;
   }
 
   .footer {
@@ -36,7 +37,7 @@
   width: 200px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   /*z-index: 1; /* Stay on top */
-  top: 135px; /* Stay at the top */
+  top: 155px; /* Stay at the top */
   right: 20px;
   overflow-x: hidden; /* Disable horizontal scroll */
 .}
@@ -47,7 +48,7 @@
   position: fixed;
   padding-left: 150px;
   padding-right: 50px;
-  top: 120px;
+  top: 140px;
   }
 
 .body-text p {
